--- a/lib/phoenix_blog_web/templates/layout/app.html.eex
+++ b/lib/phoenix_blog_web/templates/layout/app.html.eex
@@ -9,10 +9,24 @@
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
-    <main role="main" class="container">
+    <main role="main">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-      <%= @inner_content %>
+      <div>
+        <div class="bg-gray-800 pb-32">
+          <%= render PhoenixBlogWeb.PartialView, "_navbar.html" %>
+          <%= render PhoenixBlogWeb.PartialView, "_header.html" %>
+        </div>
+
+        <!-- main content area -->
+        <main class="-mt-32">
+          <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
+            <div class="bg-white rounded-lg shadow px-5 py-6 sm:px-6">
+              <%= @inner_content %>
+            </div>
+          </div>
+        </main>
+      </div>
     </main>
   </body>
 </html>
